fix(webui): Add a container to prevent the presto progress bar from overflowing its parent.

--- a/components/webui/client/src/pages/SearchPage/Presto/ProgressBar/index.module.css
+++ b/components/webui/client/src/pages/SearchPage/Presto/ProgressBar/index.module.css
@@ -1,3 +1,9 @@
+.prestoProgressContainer {
+    /* A `position: relative` container is needed for the `prestoProgress` element to have the correct
+    width when using `position: absolute`. */
+    position: relative;
+}
+
 .prestoProgress {
     position: absolute;
     line-height: 0;
